Criação do contextcard e função resize

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -3,19 +3,6 @@ body {
     height: 100vh;
 }
 
-#seletor {
-    position: fixed;
-    width: 30px;
-    height: 30px;
-    background-color: black;
-}
-
-#quadro {
-    margin-top: 30px;
-    margin-left: 30px;
-    background-color: beige;
-}
-
 .event {
     display: flex;
     flex-direction: column;
@@ -26,6 +13,8 @@ body {
     z-index: 9;
     background-color: lime;
     text-align: center;
+    overflow: auto;
+    resize: both;
 }
 
 .command {
@@ -38,6 +27,8 @@ body {
     z-index: 9;
     background-color: yellow;
     text-align: center;
+    overflow: auto;
+    resize: both;
 }
 
 .aggregate {
@@ -50,16 +41,34 @@ body {
     z-index: 9;
     background-color: deeppink;
     text-align: center;
+    overflow: auto;
+    resize: both;
+}
+
+.context {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 200px;
+    height: 130px;
+    position: absolute;
+    z-index: 10;
+    border: 3px solid royalblue;
+    border-radius: 5px;
+    text-align: center;
+    overflow: auto;
+    resize: both;
 }
   
 .cardheader {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: flex-end; */
     align-items: center;
-    width: 200px;
+    width: 100%;
     height: 30px;
     cursor: move;
     z-index: 10;
+    text-align: left;
     border-bottom: 1px solid black;
 }
 
@@ -67,10 +76,22 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 200px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
+}
+
+.cardtitle {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 30px;
+    padding-left: 5px;
+    z-index: 10;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    text-align: left;
 }
 
 .cardeditar {
@@ -79,6 +100,10 @@ body {
     align-items: center;
     width: 30px;
     height: 30px;
+    background-image: url("../img/pencil.png");
+    background-size: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
     cursor: pointer;
     z-index: 10;
     font-family: 'Courier New', Courier, monospace;
@@ -91,6 +116,10 @@ body {
     align-items: center;
     width: 30px;
     height: 30px;
+    background-image: url("../img/trash.png");
+    background-size: 32px;
+    background-position: center;
+    background-repeat: no-repeat;
     cursor: pointer;
     z-index: 10;
     font-family: 'Courier New', Courier, monospace;
