--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -10,7 +10,6 @@ body {
     width: 200px;
     height: 130px;
     position: absolute;
-    z-index: 9;
     background-color: lime;
     text-align: center;
     overflow: auto;
@@ -24,7 +23,6 @@ body {
     width: 200px;
     height: 130px;
     position: absolute;
-    z-index: 9;
     background-color: yellow;
     text-align: center;
     overflow: auto;
@@ -38,7 +36,6 @@ body {
     width: 200px;
     height: 130px;
     position: absolute;
-    z-index: 9;
     background-color: deeppink;
     text-align: center;
     overflow: auto;
@@ -52,7 +49,7 @@ body {
     width: 200px;
     height: 130px;
     position: absolute;
-    z-index: 10;
+    background-color: white;
     border: 3px solid royalblue;
     border-radius: 5px;
     text-align: center;
@@ -67,19 +64,8 @@ body {
     width: 100%;
     height: 30px;
     cursor: move;
-    z-index: 10;
     text-align: left;
     border-bottom: 1px solid black;
-}
-
-.cardbody {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
 }
 
 .cardtitle {
@@ -87,11 +73,20 @@ body {
     align-items: center;
     width: 100%;
     height: 30px;
-    padding-left: 5px;
-    z-index: 10;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
     text-align: left;
+}
+
+.cardordem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 18px;
+    font-weight: bolder;
 }
 
 .cardeditar {
@@ -105,7 +100,6 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
-    z-index: 10;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
 }
@@ -121,7 +115,16 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
-    z-index: 10;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+}
+
+.cardbody {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
 }
