--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -3,6 +3,55 @@ body {
     height: 100vh;
 }
 
+.barraFerramenta {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    width: 100px;
+    height: 50px;
+    background-color: lightgray;
+}
+
+.zoomIn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background-image: url("../img/zoomIn.png");
+    background-size: 50px;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.zoomIn:hover {
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.zoomOut:hover {
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.zoomOut {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background-image: url("../img/zoomOut.png");
+    background-size: 50px;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
 .event {
     display: flex;
     flex-direction: column;
