--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -11,7 +11,7 @@ body {
     position: fixed;
     top: 10px;
     left: 10px;
-    width: 100px;
+    width: 150px;
     height: 50px;
     background-color: lightgray;
 }
@@ -34,9 +34,14 @@ body {
     border-radius: 5px;
 }
 
-.zoomOut:hover {
-    border: 1px solid black;
-    border-radius: 5px;
+.zoomScale {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
 }
 
 .zoomOut {
@@ -50,6 +55,11 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
+}
+
+.zoomOut:hover {
+    border: 1px solid black;
+    border-radius: 5px;
 }
 
 .event {
@@ -91,6 +101,19 @@ body {
     resize: both;
 }
 
+.condition {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 200px;
+    height: 130px;
+    position: absolute;
+    background-color: royalblue;
+    text-align: center;
+    overflow: auto;
+    resize: both;
+}
+
 .context {
     display: flex;
     flex-direction: column;
@@ -101,7 +124,6 @@ body {
     background-color: white;
     border: 3px solid royalblue;
     border-radius: 5px;
-    text-align: center;
     overflow: auto;
     resize: both;
 }
@@ -172,6 +194,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+}
+
+.cardbodycontext {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding-top: 5px;
+    padding-left: 5px;
     width: 100%;
     height: 100%;
     font-family: 'Courier New', Courier, monospace;
