ajuste na cor do post-it rosa

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -95,7 +95,7 @@ body {
     width: 200px;
     height: 130px;
     position: absolute;
-    background-color: deeppink;
+    background-color: pink;
     text-align: center;
     overflow: auto;
     resize: both;
