--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -7,13 +7,13 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
-    position: fixed;
+    align-items: flex-start;
+    position: absolute;
     top: 10px;
     left: 10px;
-    width: 200px;
-    height: 50px;
-    background-color: lightgray;
+    width: auto;
+    height: auto;
+    z-index: 100;
 }
 
 .snapshot {
@@ -22,6 +22,7 @@ body {
     align-items: center;
     width: 50px;
     height: 50px;
+    background-color: lightgray;
     background-image: url("../img/snapshot.png");
     background-size: 40px;
     background-position: center;
@@ -35,9 +36,6 @@ body {
 }
 
 #ssMenu {
-    position: absolute; 
-    top: 10px; 
-    left: 210px; 
     width: auto; 
     height: auto; 
     z-index: 100;
@@ -67,6 +65,7 @@ body {
     align-items: center;
     width: 50px;
     height: 50px;
+    background-color: lightgray;
     background-image: url("../img/zoomIn.png");
     background-size: 50px;
     background-position: center;
@@ -85,6 +84,7 @@ body {
     align-items: center;
     width: 50px;
     height: 50px;
+    background-color: lightgray;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
 }
@@ -95,6 +95,7 @@ body {
     align-items: center;
     width: 50px;
     height: 50px;
+    background-color: lightgray;
     background-image: url("../img/zoomOut.png");
     background-size: 50px;
     background-position: center;
