--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -205,6 +205,19 @@ body {
     font-weight: bolder;
 }
 
+.cardduplicar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    background-image: url("../img/duplicar.png");
+    background-size: 18px;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
 .cardcor {
     display: flex;
     justify-content: center;
@@ -259,10 +272,11 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-    padding-top: 5px;
-    padding-left: 5px;
     width: 100%;
     height: 100%;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
+    cursor: move;
+    padding-top: 5px;
+    padding-left: 5px;
 }
