--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -22,14 +22,6 @@ input[type='file'] {
     transform-origin: top left;
 }
 
-.list {
-    width: auto; 
-    height: auto; 
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
-    z-index: 100;
-}
-
 .button {
     display: flex;
     justify-content: center;
@@ -88,6 +80,14 @@ input[type='file'] {
     background-size: 50px;
 }
 
+.list {
+    width: auto; 
+    height: auto; 
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    z-index: 100;
+}
+
 .listItem {
     display: flex;
     justify-content: space-between;
@@ -106,159 +106,91 @@ input[type='file'] {
     background-color: gray;
 }
 
-.event {
+.listItemControl {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.card {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     width: 200px;
     height: 130px;
     position: absolute;
-    background-color: rgb(255, 255, 159);
     text-align: center;
     overflow: auto;
     resize: both;
+}
+
+.event {
+    background-color: rgb(255, 255, 159);
 }
 
 .command {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 200px;
-    height: 130px;
-    position: absolute;
     background-color: lightgreen;
-    text-align: center;
-    overflow: auto;
-    resize: both;
 }
 
 .aggregate {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 200px;
-    height: 130px;
-    position: absolute;
     background-color: pink;
-    text-align: center;
-    overflow: auto;
-    resize: both;
 }
 
 .condition {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 200px;
-    height: 130px;
-    position: absolute;
     background-color: lightblue;
-    text-align: center;
-    overflow: auto;
-    resize: both;
 }
 
 .context {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 200px;
-    height: 130px;
-    position: absolute;
     background-color: white;
     border: 3px solid royalblue;
     border-radius: 5px;
-    overflow: auto;
-    resize: both;
 }
   
-.cardheader {
+.cardHeader {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 30px;
-    text-align: left;
 }
 
-.cardtitle {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 30px;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
-    text-align: left;
-}
-
-.cardordem {
+.control {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 30px;
     height: 30px;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.order {
     font-family: 'Courier New', Courier, monospace;
     font-size: 18px;
     font-weight: bolder;
 }
 
-.cardduplicar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
+.duplicate {
     background-image: url("../img/duplicar.png");
     background-size: 18px;
-    background-position: center;
-    background-repeat: no-repeat;
-    cursor: pointer;
 }
 
-.cardcor {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
+.color {
     background-image: url("../img/cor.png");
     background-size: 20px;
-    background-position: center;
-    background-repeat: no-repeat;
-    cursor: pointer;
 }
 
-.controles {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.cardeditar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
+.edit {
     background-image: url("../img/pencil.png");
     background-size: 20px;
-    background-position: center;
-    background-repeat: no-repeat;
-    cursor: pointer;
 }
 
-.cardexcluir {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
+.delete {
     background-image: url("../img/trash.png");
     background-size: 32px;
-    background-position: center;
-    background-repeat: no-repeat;
-    cursor: pointer;
 }
 
-.cardbody {
+.cardBody {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -269,15 +201,9 @@ input[type='file'] {
     cursor: move;
 }
 
-.cardbodycontext {
-    display: flex;
+.contextBody {
     justify-content: flex-start;
     align-items: flex-start;
-    width: 100%;
-    height: 100%;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
-    cursor: move;
     padding-top: 5px;
     padding-left: 5px;
 }
