--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -80,6 +80,21 @@ input[type='file'] {
     background-size: 50px;
 }
 
+.users {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    width: 50px;
+    height: 50px;
+    background-color: lightgray;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url("../img/user.png");
+    background-size: 30px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+}
+
 .list {
     width: auto; 
     height: auto; 
